// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio radio 1`] = `
<span
  aria-disabled={false}
  className="MuiButtonBase-root-19 MuiIconButton-root-10 PrivateSwitchBase-root-6 MuiRadio-root-1 MuiRadio-colorPrimary-4 MuiIconButton-colorPrimary-14"
  customcolor="primary"
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={null}
  variant="inner"
>
  <span
    className="MuiIconButton-label-18"
  >
    <input
      className="PrivateSwitchBase-input-9"
      onChange={[Function]}
      type="radio"
    />
    <div
      className="PrivateRadioButtonIcon-root-22"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-25"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-25 PrivateRadioButtonIcon-layer-23"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
        />
      </svg>
    </div>
  </span>
</span>
`;

exports[`Radio radio checked 1`] = `
<span
  aria-disabled={false}
  className="MuiButtonBase-root-105 MuiIconButton-root-96 PrivateSwitchBase-root-92 MuiRadio-root-87 MuiRadio-colorPrimary-90 PrivateSwitchBase-checked-93 Mui-checked MuiIconButton-colorPrimary-100"
  customcolor="primary"
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={null}
  variant="inner"
>
  <span
    className="MuiIconButton-label-104"
  >
    <input
      checked={true}
      className="PrivateSwitchBase-input-95"
      onChange={[Function]}
      type="radio"
    />
    <div
      className="PrivateRadioButtonIcon-root-108 PrivateRadioButtonIcon-checked-110"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-111"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-111 PrivateRadioButtonIcon-layer-109"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
        />
      </svg>
    </div>
  </span>
</span>
`;

exports[`Radio radio green checked 1`] = `
<span
  aria-disabled={false}
  className="MuiButtonBase-root-138 MuiIconButton-root-129 PrivateSwitchBase-root-125 MuiRadio-root-120 MuiRadio-colorPrimary-123 PrivateSwitchBase-checked-126 Mui-checked MuiIconButton-colorPrimary-133"
  customcolor="green"
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={null}
  variant="inner"
>
  <span
    className="MuiIconButton-label-137"
  >
    <input
      checked={true}
      className="PrivateSwitchBase-input-128"
      onChange={[Function]}
      type="radio"
    />
    <div
      className="PrivateRadioButtonIcon-root-141 PrivateRadioButtonIcon-checked-143"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-144"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-144 PrivateRadioButtonIcon-layer-142"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
        />
      </svg>
    </div>
  </span>
  <span
    className="MuiTouchRipple-root-163"
  />
</span>
`;

exports[`Radio radio primary 1`] = `
<span
  aria-disabled={false}
  className="MuiButtonBase-root-52 MuiIconButton-root-43 PrivateSwitchBase-root-39 MuiRadio-root-34 MuiRadio-colorPrimary-37 MuiIconButton-colorPrimary-47"
  customcolor="primary"
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={null}
  variant="inner"
>
  <span
    className="MuiIconButton-label-51"
  >
    <input
      className="PrivateSwitchBase-input-42"
      onChange={[Function]}
      type="radio"
    />
    <div
      className="PrivateRadioButtonIcon-root-55"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-58"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-58 PrivateRadioButtonIcon-layer-56"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
        />
      </svg>
    </div>
  </span>
  <span
    className="MuiTouchRipple-root-77"
  />
</span>
`;
